# mcp-elicitation

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  server.py  todos.json
