[project]
name = "mcp-elicitation-tutorial"
version = "1.0.0"
description = "Learn MCP Elicitation with Python - YouTube Tutorial Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
